@startuml

title __GAMELOGIC's Class Diagram__\n

  namespace gameLogic {
    enum Colour {
      BLACK
      WHITE
    }
  }
  

  namespace gameLogic {
    class gameLogic.Game {
        ~ players : Vector<Player>
        + Game()
        + addPlayer()
        + chooseOpponent()
        + deletePlayer()
        + getNotInGamePlayersNames()
        + getPlayerByName()
        + inviteOpponent()
        + refuseInvitation()
        - checkIfNameCorrect()
        - isNameTaken()
    }
  }
  

  namespace gameLogic {
    class gameLogic.GameController {
        {static} - komi : double
        {static} - n : int
        - wasPassed : boolean
        + GameController()
        + acceptProposal()
        + endGame()
        + endGame()
        + getBlack()
        + getGoban()
        + getTranslator()
        + getWhite()
        + makeMove()
        + passMove()
        + resumeGame()
        + run()
        + sendProposal()
        + setState()
        - calculateResults()
    }
  }
  

  namespace gameLogic {
    class gameLogic.Player {
        - inGame : boolean
        - name : String
        + Player()
        + acceptSuggestion()
        + beInvited()
        + beRefused()
        + getGamePlay()
        + getName()
        + isInGame()
        + makeMove()
        + passMove()
        + sendMessage()
        + sendProposal()
        + setGamePlay()
        + setInGame()
        + setNotInGame()
    }
  }
  

  gameLogic.GameController o-- gameLogic.Player : black
  gameLogic.GameController o-- gameLogic.goban.Goban : goban
  gameLogic.GameController o-- gameLogic.states.GameControllerState : state
  gameLogic.GameController o-- translators.GamePlayTranslator : translator
  gameLogic.GameController o-- gameLogic.Player : white
  gameLogic.Player o-- gameLogic.GameController : gamePlay
  gameLogic.Player o-- server.ClientHandler : handler
  gameLogic.Player o-- translators.ClientMessagesTranslator : translator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
